--- a/css/theme/white_styled.css
+++ b/css/theme/white_styled.css
@@ -74,7 +74,7 @@ body {
   margin: 20px 0;
   line-height: 1.3;
   font-weight: 300;
-  margin-bottom: 1.2rem; 
+  margin-bottom: 1.2rem;
 }
 
 /* Ensure certain elements are never larger than the slide itself */
@@ -96,6 +96,7 @@ body {
 .reveal ul {
   display: inline-block;
   text-align: left;
+  font-weight: 400;
   margin: 0 0 0 1em; }
 
 .reveal ol {
@@ -116,6 +117,10 @@ body {
 .reveal ol ul {
   display: block;
   margin-left: 40px; }
+
+.reveal li {
+    font-weight: 400;
+}
 
 .reveal dt {
   font-weight: bold; }
